Implemented reading analog signals using the ADC circuit. Partially implemented reading the joystick data.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,8 @@ add_avr_executable(
    avr-gameport
    
    main
+   hwinit
+   analog_read
 )
 
 # #####################################################################
