Refactored the analog data handling, further implemented the logic

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ add_avr_executable(
    
    main
    hwinit
-   analog_read
+   joystick
 )
 
 # #####################################################################
