Disable linking V-USB for now. It will be enabled, when the USB descriptors and interfacing logic is ready.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,5 +14,5 @@ add_avr_executable(
 # #####################################################################
 target_link_libraries(
     avr-gameport.elf
-    libVUsb
+#    libVUsb
 )
