Enabled ASM language in CMakeLists.txt for V-USB.
This is needed to compile and link the assembler parts of V-USB.

--- a/usbdrv/CMakeLists.txt
+++ b/usbdrv/CMakeLists.txt
@@ -1,6 +1,8 @@
 #####################################################################
 # VUSB library
 #####################################################################
+enable_language(ASM)
+
 add_avr_library(
     libVUsb
     usbdrv
